--- a/index.html
+++ b/index.html
@@ -7,14 +7,74 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
+
 <div class="container-fluid">
-    <div class="row header"></div>
-    <div class="row main"></div>
-    <div class="row main"></div>
-    <div class="row footer"></div>
+  <div class="row header bgFooter">
+    <div class="col-sm-3">
+        <img src="assets/img/logo_burger.png" alt="">
+    </div>
+    <div class="col-sm-9 btnHeader">
+      <H1>Control de Stock de BurgerHouse</H1>
+      <button type="button" id="out" class="btn btn-light">LogOut</button>
+    </div>  
+</div>
+    <div class="row main1">
+      <div class="col-sm-6">
+        <p class="text-center pt-4">Agregar BOX</p>
+        <form>
+          <div class="mb-3">
+            <label class="form-label">ID BOX</label>
+            <input type="text" class="form-control" id="id">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Panes</label>
+            <input type="text" class="form-control" id="pan" >
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Carnes</label>
+            <input type="text" class="form-control" id="carne" >
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Cheddar</label>
+            <input type="text" class="form-control" id="cheddar" >
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Cebolla</label>
+            <input type="text" class="form-control" id="cebolla" >
+          </div>
+          <button type="button" class="btn btn-primary" id="stock">Submit</button>
+        </form>
+      </div>
+      <div class="col-sm-6">
+        <p class="text-center pt-4">Listado BoX</p>
+        
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Panes</th>
+              <th scope="col">Hamburgesas</th>
+              <th scope="col">Cheddar</th>
+              <th scope="col">Cebolla</th>
+            </tr>
+          </thead>
+          <tbody id="inner">
+            <!-- Desde JS -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="row bgFooter">
+      <div class="col-12 col-lg-4 "></div>
+      <div class="col-12 col-lg-4 seguinos txtColor mt-2 mb-2">Seguinos en nuestras redes para estar en contacto!</div>
+      <div class="col-12 col-lg-4 mt-2 mb-2 logoRrss">
+      <a class="insta" href="https://www.instagram.com/" target="_blank"><img src="assets/img/Instagram_Blanc.png" alt="instagram logo"></a>
+      <a class="twitter" href="https://twitter.com/?lang=es" target="_blank"><img src="assets/img/Twitter_LOGO.png" alt="twitter logo"></a>
+      <a class="wsp" href="https://web.whatsapp.com/" target="_blank"><img src="assets/img/Wsp_Blanc.png" alt="wsp logo"></a>
+</div>
 </div>
     
    
